cabal-version:       >=1.10
name:                Haskell-Proje
version:             0.1.0.0
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable Haskell-Proje
  main-is:             Main.hs
  build-depends:       base >=4.12 && <5,
                       scotty,
                       aeson,
                       wai-cors
  default-language:    Haskell2010